feat: add responsive

--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -99,3 +99,27 @@
   height: 100%;
   object-fit: cover;
 }
+
+@media (max-width: 768px) {
+  .header {
+    flex-wrap: wrap;
+    gap: 15px;
+  }
+  .nav {
+    order: 3;
+    width: 100%;
+    overflow-x: auto;
+    padding-bottom: 5px;
+  }
+
+  .userActions {
+    order: 1;
+  }
+
+  .feedHeader {
+    flex-direction: column;
+    gap: 15px;
+    align-items: flex-start;
+  }
+
+}
