--- a/src/components/categories/categories.module.css
+++ b/src/components/categories/categories.module.css
@@ -61,3 +61,8 @@
   font-size: 13px;
   color: #666;
 }
+@media (max-width: 480px) {
+  .categoriesGrid {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
