--- a/src/components/feed/feed.module.css
+++ b/src/components/feed/feed.module.css
@@ -80,3 +80,10 @@
   background-color: #4e5de4;
   border-radius: 10px;
 }
+@media (max-width: 480px) {
+
+
+  .feedGrid {
+    grid-template-columns: 1fr;
+  }
+}
