--- a/src/components/newsLetterSection/newsLetterSection.module.css
+++ b/src/components/newsLetterSection/newsLetterSection.module.css
@@ -75,3 +75,15 @@
   height: 100%;
   object-fit: cover;
 }
+
+  @media (max-width: 1024px) {
+
+  .newsletterSection {
+    flex-direction: column;
+  }
+
+  .newsletterImageContainer {
+    max-width: 100%;
+    height: 200px;
+  }
+}
